syntax = "proto3";
//python -m grpc_tools.protoc -I. --python_out=vision/protogen --grpc_python_out=vision/protogen   proto/yolo.proto
package yolo;

option java_package = "com.example.yolo";
option java_outer_classname = "YoloProto";
option java_multiple_files = true;

// Запрос на детекцию изображения с параметрами
message ImageRequest {
  bytes image = 1;                 // изображение в формате JPEG/PNG
  float conf_threshold = 2;        // минимальный confidence для объектов
  float iou_threshold = 3;         // IoU threshold для NMS
  repeated string classes = 4;     // фильтр по классам (пустой = все)
  int32 max_det = 5;               // максимальное количество детекций
  bool augment = 6;                // использовать test-time augmentation (TTA)
  int32 img_size = 7;              // размер входного изображения (ширина=высота)
  bool half = 8;                  // использовать FP16 для ускорения на GPU
}

// Bounding box для объекта
message BoundingBox {
  string class_name = 1;
  float x = 2;       // нормализованные координаты [0,1]
  float y = 3;
  float width = 4;
  float height = 5;
  float confidence = 6;
}

// Ответ сервера с детекцией
message ImageResponse {
  repeated BoundingBox boxes = 1;
}

// gRPC сервис
service YoloService {
  rpc DetectObjects(ImageRequest) returns (ImageResponse);
}
